+ add 'Warn if missing potions' feature
+ add 'Prevent warping out' feature while brewing