@@ -1,2 +1,3 @@
 + add 'Warn if missing potions' feature
 + add 'Prevent warping out' feature while brewing
+= colour (ansi) support for oringo discord message
